# JavaPwner

./: .gitignore  DEVELOPMENT_PLAN.md  IMPROVEMENTS.md  IMPROVEMENTS_PLAN.md  README.md  TEST_PLAN.md  pyproject.toml  requirements.txt
javapwner/: __main__.py  exceptions.py
javapwner/cli/: jboss_cmds.py  jini_cmds.py  main.py  rmi_cmds.py
javapwner/core/: jvm_bridge.py  jvm_exploit.py  output.py  payload.py  serialization.py  socket_helper.py
javapwner/protocols/jboss/: fingerprint.py  invoker.py  jnp.py  remoting.py  remoting3.py  scanner.py
javapwner/protocols/jini/: assessment.py  codebase.py  enumerator.py  exploiter.py  jrmp.py  (+4 more)
lab/: README.md  docker-compose.yml
lab/jboss4/: Dockerfile  configure.sh
lab/jini-reggie/: Dockerfile  FunctorException.java  reggie.config  start.sh
lab/rmi-server/: Dockerfile
lib/: .gitkeep  JiniInspector.java  JvmExploiter.java  MarshalSerializer.java  pom.xml  security.policy
resources/: rmi_methods.json
tests/: test_assessment.py  test_cli_extended.py  test_exploiter_extended.py  test_guesser.py  test_jboss_fingerprint.py  test_jboss_fingerprint_ext.py  test_jboss_scanner.py  test_jini_enumerator_extended.py  test_jini_probe.py  test_jnp.py  test_jvm_bridge_extended.py  test_jvm_exploit.py  test_listener.py  test_new_vectors.py  test_payload.py  test_payload_extended.py  test_protocol.py  test_registrar.py  test_remoting2.py  test_remoting3.py  test_rmi_protocol.py  test_rmi_protocol_extended.py  test_rmi_scanner.py  test_rmi_version_inference.py  test_serialization.py
tests/integration/: test_jini_live.py
(+32 files in other folders)
